--- a/css/style.css
+++ b/css/style.css
@@ -291,7 +291,7 @@ h4 {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  overflow-y: hidden;
+  overflow: hidden;
 }
 
 .main {
