--- a/css/style.css
+++ b/css/style.css
@@ -341,7 +341,7 @@ h4 {
     display: grid;
   }
   .footer{
-    margin-bottom: 47px 
+    margin-bottom: 47px;
   }
   .scrollup {
     bottom: 10px;
