--- a/css/style.css
+++ b/css/style.css
@@ -474,7 +474,33 @@ h4 {
 .color19 {
   background-color: transparent !important;
 }
-
+.color20 {
+  background-color: #32A3F6 !important;
+}
+.color21 {
+  background-color: #FF9501 !important;
+}
+.bordercolor1 {
+  border-color: #33C7A2 !important;
+}
+.bordercolor2 {
+  border-color: #32A3F6 !important;
+}
+.bordercolor3 {
+  border-color: #FFD129  !important;
+}
+.bordercolor4 {
+  border-color: #FF9501  !important;
+}
+.bordercolor5 {
+  border-color: #FF5642 !important;
+}
+.bordercolor6 {
+  border-color: #D589CC !important;
+}
+.bordercolor7 {
+  border-color: #20A0A0 !important;
+}
 .textcolor1 {
   color: #7DDF9B !important;
 }
@@ -9367,3 +9393,281 @@ section.math-hach>.seven-section>.seven-section-block {
 .checkbox-tab.feedback-form>.uk-checkbox:checked {
   background-image: url("data:image/svg+xml,%3Csvg width='20' height='20' viewBox='0 0 20 20' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M8.00034 16L3 10.7499L4.42838 9.25013L8.00135 12.9984L8.00034 12.9995L16.5716 4L18 5.49974L9.42872 14.5003L8.00135 15.9989L8.00034 16V16Z' fill='%23AE00D4'/%3E%3C/svg%3E");
 }
+
+/*---Блок с ценами ----*/
+.pricing-simple>div{
+  order: 1;
+}
+.pricing-simple>div:nth-child(1) {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  padding: 50px 20px 10px;
+}
+
+.pricing-simple>div:nth-child(1)>h4{
+  font-size: clamp(28px, 3.5vw, 36px); 
+  line-height: clamp(28px, 3.5vw, 36px);
+}
+.pricing-simple>div:nth-child(1)>div {
+  font-size: clamp(16px, 2vw, 20px);
+  line-height: clamp(20px, 2vw, 24px);
+  font-family: "Nunito";
+  font-style: normal;
+  font-weight: 500;
+  margin-bottom: 50px;
+}
+.pricing-item {
+  border: 2px solid;
+  border-radius: 15px;
+  margin-top: 45px;
+  z-index: 100;
+  position: relative;
+  container-type: inline-size;
+  container-name: pricing-item;
+  transition: .5s ease-in-out;
+}
+
+.pricing-item:hover{
+  box-shadow: 0 15px 15px rgba(0,0,0,.1);
+      transform: translate(0,-15px);
+
+}
+@media screen and (min-width: 640px) and (max-width: 1200px) {
+  .pricing-simple>div:nth-child(1), .pricing-simple>div:nth-child(2), .pricing-simple>div:nth-child(4){
+    order: 0;
+  }
+}
+.pricing-item_icon {
+  -webkit-border-radius: 50% / 100% 100% 0 0;
+  -moz-border-radius: 50% / 100% 100% 0 0;
+  border-radius: 50% / 100% 100% 0 0;
+  height: 38px;
+  left: 35%;
+  top: -38px;
+  position: relative;
+  width: 75px;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  background: #fff;
+  border: 2px solid;
+  border-bottom: 0px;
+}
+
+.pricing-item_icon>img {
+  position: relative;
+  top: -23px;
+  width: 70px;
+  right: 6px;
+}
+.pricing-item_icon>img.right{
+  right: -6px;
+}
+.pricing-item_icon::before {
+  background: #fff;
+  border-radius: 50%;
+  display: block;
+  content: '';
+  width: 75px;
+  height: 70px;
+  position: relative;
+  top: 55px;
+}
+
+@container pricing-item (min-width: 360px) {
+  .pricing-item_icon {
+    left: 39%;
+  }
+}
+
+@container pricing-item (min-width: 380px) {
+  .pricing-item_icon {
+    left: 40%;
+  }
+}
+
+@container pricing-item (min-width: 450px) {
+  .pricing-item_icon {
+    left: 40%;
+  }
+}
+
+.pricing-header_top {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 40px 10px 10px;
+  position: relative;
+  bottom: 39px;
+  z-index: -1;
+  border-radius: 12px 12px 0px 0px;
+  min-height: 82px;
+}
+
+.pricing-header_top>li {
+  font-family: "Nunito-Bold";
+  font-style: normal;
+  font-weight: 700;
+  line-height: 32px;
+  font-size: 16px;
+  color: #fff;
+}
+
+.pricing-item_title {
+  font-family: "Nunito-Bold";
+  font-style: normal;
+  font-weight: 700;
+  font-size: clamp(24px, 2.6vw, 32px); 
+  line-height: clamp(26px, 3.5vw, 36px);
+  color: #2A3B4F;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+  text-align: center;
+  position: relative;
+  bottom: 35px;
+}
+.pricing-item_title.bottom{
+  bottom: 65px;
+}
+.pricing-item_one {
+  padding: 15px 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 5px;
+  position: relative;
+  bottom: 35px;
+}
+
+.pricing-item_one>div {
+  font-family: "Nunito-Bold";
+  font-style: normal;
+  font-weight: 700;
+  color: #fff;
+}
+
+.pricing-item_one>div:nth-child(1) {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  gap: 5px;
+  font-size: 24px;
+  align-items: flex-end;
+}
+
+.pricing-item_one>div:nth-child(1)>span {
+  font-size: 40px;
+}
+
+.pricing-item_one>div:nth-child(2) {
+  font-size: 16px;
+}
+
+.pricing-item_one>div>span {
+  color: inherit;
+}
+
+.pricing-item_set {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px 10px 25px;
+  font-family: "Nunito-Bold";
+  font-style: normal;
+  font-weight: 700;
+  color: #2A3B4F;
+  font-size: 16px;
+  gap: 15px;
+  min-height: 150px;
+  justify-content: center;
+  position: relative;
+  bottom: 20px;
+}
+
+.pricing-item_set>span {
+  font-family: "Nunito";
+  font-style: normal;
+  font-weight: 500;
+  text-align: center;
+}
+
+.pricing-item_button {
+  display: flex;
+  justify-content: center;
+  padding: 0 20px 20px;
+  margin-top: -30px;
+}
+
+.pricing-item_button>a {
+  padding: 10px 10px;
+  width: 100%;
+}
+.button-color-1 {
+  background: #33C7A2;
+  border: 2px solid #33C7A2;
+}
+.button-color-1:hover {
+  color: #33C7A2;
+  background: #fff;
+  border: 2px solid #33C7A2;
+}
+.button-color-2 {
+  background: #32A3F6;
+  border: 2px solid #32A3F6;
+}
+.button-color-2:hover {
+  color: #32A3F6;
+  background: #fff;
+  border: 2px solid #32A3F6;
+}
+.button-color-3 {
+  background: #FFD129;
+  border: 2px solid #FFD129 ;
+}
+.button-color-3:hover {
+  color: #FFD129 ;
+  background: #fff;
+  border: 2px solid #FFD129;
+}
+.button-color-4 {
+  background: #FF9501;
+  border: 2px solid #FF9501;
+}
+.button-color-4:hover {
+  color: #FF9501 ;
+  background: #fff;
+  border: 2px solid #FF9501;
+}
+.button-color-5 {
+  background: #FF5642;
+  border: 2px solid #FF5642;
+}
+.button-color-5:hover {
+  color: #FF5642;
+  background: #fff;
+  border: 2px solid #FF5642;
+}
+.button-color-6 {
+  background: #D589CC;
+  border: 2px solid #D589CC;
+}
+.button-color-6:hover {
+  color: #D589CC;
+  background: #fff;
+  border: 2px solid #D589CC;
+}
+ 
+.button-color-7 {
+  background: #20A0A0;
+  border: 2px solid #20A0A0;
+}
+.button-color-7:hover {
+  color: #20A0A0;
+  background: #fff;
+  border: 2px solid #20A0A0;
+}
+ 
