--- a/css/style.css
+++ b/css/style.css
@@ -5727,7 +5727,7 @@ ol.lessons-list li:before {
   }
 
   .two-section-img5 {
-    left: 80%;
+    left: 93%;
     top: 900px;
   }
 
@@ -9431,7 +9431,7 @@ section.math-hach>.seven-section>.seven-section-block {
   border: 2px dashed transparent;
   transition: all .5s;
   cursor: pointer;
-  border-radius: 10px;
+  border-radius: 5px;
 }
 
 .btn-reviews-pricing>span:nth-child(1) {
@@ -9445,7 +9445,7 @@ section.math-hach>.seven-section>.seven-section-block {
 .btn-reviews-pricing>span:nth-child(2) {
   top: -1px;
   position: relative;
-  transition: all .5s;
+  transition: all .3s;
 }
 
 .btn-reviews-pricing:hover {
@@ -9826,4 +9826,28 @@ section.math-hach>.seven-section>.seven-section-block {
 .pricing-item_set_hit {
   min-height: 100px;
   bottom: 25px;
+}
+
+.btn-reviews-pricing_mobile {
+  display: none;
+}
+
+@media (max-width: 640px) {
+  .btn-reviews-pricing_desctop {
+    display: none !important;
+  }
+
+  .btn-reviews-pricing_mobile {
+    display: flex;
+    order: 1;
+    margin: 0 auto;
+  }
+
+  .pricing-simple>div:nth-child(1)>h4 {
+    text-align: center;
+  }
+
+  .pricing-simple>div:nth-child(1)>div {
+    text-align: center;
+  }
 }
