--- a/css/style.css
+++ b/css/style.css
@@ -1146,7 +1146,7 @@ span.menu-one {
   margin-right: -7px;
   width: 40px;
   height: 40px;
-  display: block;
+  display: none;
   position: relative;
   left: -10px;
 }
