--- a/css/style.css
+++ b/css/style.css
@@ -316,7 +316,7 @@ h4 {
 
 .footer-buttons {
   position: fixed;
-  z-index: 100000000;
+  z-index: 9999;
   bottom: 0;
   display: none;
   justify-items: stretch;
@@ -484,15 +484,19 @@ h4 {
 .color21 {
   background-color: #FF9501 !important;
 }
+
 .color22 {
   background-color: #C774FB !important;
 }
+
 .color23 {
   background-color: #40CDE0 !important;
 }
+
 .color24 {
-  background-color: #FFB31F!important;
+  background-color: #FFB31F !important;
 }
+
 .bordercolor1 {
   border-color: #33C7A2 !important;
 }
@@ -520,15 +524,19 @@ h4 {
 .bordercolor7 {
   border-color: #20A0A0 !important;
 }
+
 .bordercolor8 {
   border-color: #C774FB !important;
 }
+
 .bordercolor9 {
   border-color: #40CDE0 !important;
 }
+
 .bordercolor10 {
   border-color: #FFB31F !important;
 }
+
 .textcolor1 {
   color: #7DDF9B !important;
 }
@@ -1263,6 +1271,7 @@ span.menu-one {
   margin: 15px 20px 10px 0px;
   padding: 12px 25px;
 }
+
 .menu-second-mobile>li>a {
   display: flex;
   flex-wrap: nowrap;
@@ -1272,10 +1281,12 @@ span.menu-one {
   margin: 15px 20px 10px 0px;
   padding: 12px 25px;
 }
-.menu-second-sub-mobile>li>a.cat{
+
+.menu-second-sub-mobile>li>a.cat {
   font-family: 'Nunito-Black';
   font-size: 15px !important;
 }
+
 .menu-second-mobile>li.uk-parent>a[aria-expanded="true"] {
   background: #FCEDFF;
 }
@@ -2674,31 +2685,37 @@ ul.accordion-answer>li>div>p {
 .form-tab-1-checkbox>li {
   min-height: 150px;
 }
+
 .form-tab-1d>li:nth-child(1)>a {
   background: #D41B19;
   border: 2px solid #FFFFFF;
   border-radius: 10px;
   color: #ffffff;
- cursor: default;
+  cursor: default;
 }
-.form-tab-1d>li:nth-child(2)>a{
+
+.form-tab-1d>li:nth-child(2)>a {
   transition: all 0.5s;
 }
+
 .form-tab-1d>li:nth-child(2)>a:hover {
   background: #20A0A0;
   border: 2px solid #FFFFFF;
   border-radius: 10px;
   color: #ffffff;
 }
-  
-.button-form-tab-1, .button-form-tab-2{
+
+.button-form-tab-1,
+.button-form-tab-2 {
   border-radius: 10px;
 }
-.button-form-tab-1.passive{
+
+.button-form-tab-1.passive {
   background: #fff !important;
   background-color: #fff !important;
   color: #ccc !important;
 }
+
 .checkbox-tab {
   margin: 10px;
   display: flex;
@@ -9842,6 +9859,7 @@ section.math-hach>.seven-section>.seven-section-block {
   background: #fff;
   border: 2px solid #20A0A0;
 }
+
 .button-color-8 {
   background: #C774FB;
   border: 2px solid #C774FB;
@@ -9852,6 +9870,7 @@ section.math-hach>.seven-section>.seven-section-block {
   background: #fff;
   border: 2px solid #C774FB;
 }
+
 .button-color-9 {
   background: #40CDE0;
   border: 2px solid #40CDE0;
@@ -9861,7 +9880,8 @@ section.math-hach>.seven-section>.seven-section-block {
   color: #40CDE0;
   background: #fff;
   border: 2px solid #40CDE0;
-} 
+}
+
 .button-color-10 {
   background: #FFB31F;
   border: 2px solid #FFB31F;
@@ -9871,7 +9891,8 @@ section.math-hach>.seven-section>.seven-section-block {
   color: #FFB31F;
   background: #fff;
   border: 2px solid #FFB31F;
-} 
+}
+
 .pricing-header_top_hit {
   background: rgb(255, 255, 255);
   background: linear-gradient(45deg, rgba(255, 255, 255, 1) 76%, rgba(255, 86, 66, 1) 76%, rgba(255, 86, 66, 1) 88%, rgba(255, 255, 255, 1) 88%);
@@ -9913,9 +9934,11 @@ section.math-hach>.seven-section>.seven-section-block {
 .btn-reviews-pricing_mobile {
   display: none !important;
 }
+
 .pricing-margin>div>section {
   margin: -60px 0px 70px;
 }
+
 @media (max-width: 640px) {
   .btn-reviews-pricing_desctop {
     display: none !important;
